<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="switcher_settingsLayout">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="termsOfUse">Пользовательское соглашение</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="tv_dark_mode">Темная тема</string>
    <string name="practicum_Url">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="my_email">aldunsar@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="no_internet">Проблемы со связью.\n\nЗагрузка не удалась. Проверьте ваше подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="searched">Вы искали:</string>
    <string name="clear_history">Очистить историю</string>
    <string name="track_duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="_00_00">00:00</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_playlist">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="media">Медиатека</string>
    <string name="playlist_name">Workout</string>
    <string name="_24">24 трека</string>
    <string name="et_playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="save">Сохранить</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="alert_dialog">Завершить создание плейлиста?</string>
    <string name="alert_dialog_set_message">Все несохраненные данные будут потеряны</string>
    <string name="alert_dialog_set_positive_button">Завершить</string>
    <string name="negative_button">Отмена</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="track_added_to_playlist_toast">Добавлено в плейлист %s</string>
    <string name="playlist_created">Плейлист %s создан</string>

    <string name="track_count_placeholder">%d треков</string>

</resources>