<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/settingsLayoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <!--        <ImageView-->
        <!--            android:id="@+id/back_button_from_settings"-->
        <!--            style="@style/settings_arrow_style"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:layout_marginVertical="4dp"-->
        <!--            android:layout_marginStart="20dp"-->
        <!--            android:layout_weight="0"-->
        <!--            android:foreground="?attr/selectableItemBackground"-->
        <!--            android:src="@drawable/ic_arrow_back" />-->

        <TextView
            style="@style/header_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/button_settings"
            android:textFontWeight="500"
            android:textSize="22sp" />
    </LinearLayout>

    <Switch
        android:id="@+id/switch_theme"
        style="@style/theme_switcher_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:foreground="?attr/selectableItemBackground"
        android:paddingVertical="21dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:text="@string/switcher_settingsLayout"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/button_share_app"
        style="@style/settings_layout_text_style"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/button_support"
        style="@style/settings_layout_text_style"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/button_terms_of_use"
        style="@style/settings_layout_text_style"
        android:text="@string/termsOfUse"
        app:drawableEndCompat="@drawable/ic_terms_of_use" />
</LinearLayout>