<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainLayout_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:text="@string/playlist_maker"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/white"
            android:text="@string/button_search"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"
            app:cornerRadius="@dimen/main_button_cornerRadius"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/buttonMedia"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button_media"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"
            app:cornerRadius="@dimen/main_button_cornerRadius"
            app:icon="@drawable/ic_media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button_settings"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"
            app:cornerRadius="@dimen/main_button_cornerRadius"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>