<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.media.playlist.newplaylist.CreatePlaylistFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/header_style" />

    <ImageView
        android:id="@+id/iv_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_playlist_image"
        app:layout_constraintBottom_toBottomOf="@+id/image_place"
        app:layout_constraintEnd_toEndOf="@+id/image_place"
        app:layout_constraintStart_toStartOf="@+id/image_place"
        app:layout_constraintTop_toTopOf="@+id/image_place" />

    <ImageView
        android:id="@+id/image_place"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/shape_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/et_playlist_name"
        app:boxStrokeColor="@color/selector_textinputlayout"
        app:cursorColor="@color/pb_blue"
        app:hintTextColor="@color/selector_textinputlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_place">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_playlist_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/playlist_description"
        app:boxStrokeColor="@color/selector_textinputlayout"
        app:cursorColor="@color/pb_blue"
        app:hintTextColor="@color/selector_textinputlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_playlist_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_desc"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create_new_playlist"
        android:layout_width="326dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/create_playlist"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>