<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/empty"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back" />

        <ImageView
            android:id="@+id/track_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/gl_end_for_track_cover"
            app:layout_constraintStart_toStartOf="@id/gl_start_for_track_cover"
            app:layout_constraintTop_toBottomOf="@id/tb_player"
            app:srcCompat="@drawable/cream_cover" />

        <TextView
            android:id="@+id/tv_track_name"
            style="@style/player_track_name_style"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textFontWeight="400"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@id/gl_end_for_track_cover"
            app:layout_constraintStart_toStartOf="@id/gl_start_for_track_cover"
            app:layout_constraintTop_toBottomOf="@+id/track_cover"
            tools:text="C.R.E.A.M." />

        <TextView
            android:id="@+id/tv_artist_name"
            style="@style/player_track_artist_style"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textFontWeight="400"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/gl_end_for_track_cover"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/gl_start_for_track_cover"
            app:layout_constraintTop_toBottomOf="@+id/tv_track_name"
            tools:text="Wu-Tang Clan" />

        <ImageView
            android:id="@+id/button_add_track"
            style="@style/player_layout_small_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_add_track"
            app:layout_constraintBottom_toBottomOf="@+id/button_play_track"
            app:layout_constraintEnd_toStartOf="@+id/button_play_track"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gl_start_for_track_cover"
            app:layout_constraintTop_toTopOf="@+id/button_play_track" />

        <ImageView
            android:id="@+id/button_play_track"
            style="@style/play_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/button__play_track"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_artist_name" />

        <ImageView
            android:id="@+id/button_like_track"
            style="@style/player_layout_small_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_like_track"
            app:layout_constraintBottom_toBottomOf="@+id/button_play_track"
            app:layout_constraintEnd_toStartOf="@+id/gl_end_for_track_cover"
            app:layout_constraintStart_toEndOf="@+id/button_play_track"
            app:layout_constraintTop_toTopOf="@+id/button_play_track" />

        <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/button_play_track"
            app:layout_constraintStart_toStartOf="@+id/button_play_track"
            app:layout_constraintTop_toBottomOf="@+id/button_play_track"
            tools:text="00:00" />

        <TextView
            android:id="@+id/tv_duration"
            style="@style/track_structure_style"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="30dp"
            android:text="@string/track_duration"
            app:layout_constraintStart_toStartOf="@+id/gl_start_for_data"
            app:layout_constraintTop_toBottomOf="@+id/current_time" />

        <TextView
            android:id="@+id/tv_album"
            style="@style/track_structure_style"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/album"
            app:layout_constraintStart_toStartOf="@+id/gl_start_for_data"
            app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

        <TextView
            android:id="@+id/tv_track_year"
            style="@style/track_structure_style"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/track_year"
            app:layout_constraintStart_toStartOf="@+id/gl_start_for_data"
            app:layout_constraintTop_toBottomOf="@+id/tv_album" />

        <TextView
            android:id="@+id/tv_track_genre"
            style="@style/track_structure_style"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/track_genre"
            app:layout_constraintStart_toStartOf="@+id/gl_start_for_data"
            app:layout_constraintTop_toBottomOf="@+id/tv_track_year" />

        <TextView
            android:id="@+id/tv_track_country"
            style="@style/track_structure_style"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/track_country"
            app:layout_constraintStart_toStartOf="@+id/gl_start_for_data"
            app:layout_constraintTop_toBottomOf="@+id/tv_track_genre" />

        <TextView
            android:id="@+id/track_duration"
            style="@style/track_data_style"
            android:layout_width="0dp"
            android:layout_height="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_duration"
            app:layout_constraintEnd_toStartOf="@+id/gl_end_for_data"
            app:layout_constraintStart_toEndOf="@+id/tv_duration"
            app:layout_constraintTop_toTopOf="@+id/tv_duration"
            tools:text="4:12" />

        <TextView
            android:id="@+id/track_album"
            style="@style/track_data_style"
            android:layout_width="0dp"
            android:layout_height="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_album"
            app:layout_constraintEnd_toStartOf="@+id/gl_end_for_data"
            app:layout_constraintStart_toEndOf="@+id/tv_album"
            app:layout_constraintTop_toTopOf="@+id/tv_album"
            tools:text="Enter the Wu-Tang (36 Chambers)" />

        <TextView
            android:id="@+id/track_release_date"
            style="@style/track_data_style"
            android:layout_width="0dp"
            android:layout_height="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_track_year"
            app:layout_constraintEnd_toStartOf="@+id/gl_end_for_data"
            app:layout_constraintStart_toEndOf="@+id/tv_track_year"
            app:layout_constraintTop_toTopOf="@+id/tv_track_year"
            tools:text="1994" />

        <TextView
            android:id="@+id/track_genre"
            style="@style/track_data_style"
            android:layout_width="0dp"
            android:layout_height="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_track_genre"
            app:layout_constraintEnd_toStartOf="@+id/gl_end_for_data"
            app:layout_constraintStart_toEndOf="@+id/tv_track_genre"
            app:layout_constraintTop_toTopOf="@+id/tv_track_genre"
            tools:text="East Coast hip hop" />

        <TextView
            android:id="@+id/track_country"
            style="@style/track_data_style"
            android:layout_width="0dp"
            android:layout_height="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_track_country"
            app:layout_constraintEnd_toStartOf="@+id/gl_end_for_data"
            app:layout_constraintStart_toEndOf="@+id/tv_track_country"
            app:layout_constraintTop_toTopOf="@+id/tv_track_country"
            tools:text="USA" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start_for_data"
            style="@style/player_layout_guideline_style"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end_for_data"
            style="@style/player_layout_guideline_style"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start_for_track_cover"
            style="@style/player_layout_guideline_style"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end_for_track_cover"
            style="@style/player_layout_guideline_style"
            app:layout_constraintGuide_end="24dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>